# llvm-binaries

./: .bazelrc  LICENSE  README.md  WORKSPACE.bazel  version.bzl
.github/: labeler.yml
.github/workflows/: ci.yml
patches/20.1.1/: missing_max_clang_abi_compat_version.patch
pkg/: BUILD.bazel
tools/: patch_binary.bzl  rules_version.bzl
