# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Benjamin Kern

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "LLVM_VERSION")
load("//tools:patch_binary.bzl", "patch_binary")

patch_binary("lldb", "@llvm-project//lldb:lldb")

patch_binary("lldb-dap", "@llvm-project//lldb/tools/lldb-dap:lldb-dap")

pkg_tar(
    name = "lldb_pkg",
    srcs = [
        ":lldb",
        ":lldb-dap",
        "@llvm-project//lldb:lldb-argdumper",
        "@llvm-project//lldb:lldb-server",
        "@llvm-project//lldb:lldb{version}None".format(version = LLVM_VERSION),
    ],
    extension = "tar.gz",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
