# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Benjamin Kern

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "LLVM_VERSION")
load("//tools:patch_binary.bzl", "patch_binary")

patch_binary("lldb", "@llvm-project//lldb:lldb")

patch_binary("lldb-dap", "@llvm-project//lldb:lldb-dap")

pkg_tar(
    name = "lldb_pkg",
    srcs = [
        ":lldb",
        ":lldb-dap",
        "@llvm-project//lldb:LICENSE.TXT",
        "@llvm-project//lldb:lldb-argdumper",
        "@llvm-project//lldb:lldb-server",
        "@llvm-project//lldb:lldb{version}None".format(version = LLVM_VERSION),
    ],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "lld_pkg",
    srcs = [
        "@llvm-project//lld:lld",
    ],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)
